# discord-fate-bot

./: .bumpversion.cfg  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.migrations  LICENSE.txt  Pipfile  README.md  app.Dockerfile  build.Dockerfile  docker-compose.yml  fate-discord-bot.dockerapp  migrations.Dockerfile  pyproject.toml  setup.cfg
.circleci/: config.yml
alembic/: env.py
alembic/versions/: 411aa7f2a2a8_add_scene_and_scene_aspect.py
discord-fate-bot-app.dockerapp/: docker-compose.yml  metadata.yml
discord-fate-bot.dockerapp/: docker-compose.yml  metadata.yml
discord_fate_bot/: __init__.py  __main__.py  app.py  aspects_ext.py  bot.py  config.py  console_script.py  database.py  dice.py  emojis.py  error_handling.py  error_handling_ext.py  logging.ini  logging.py  roll_ext.py  scenes.py  tables.py  tags.py  util.py
discord_fate_bot/.circleci/: config.yml
discord_fate_bot/extensions/: aspects.py  error_handling.py  lifecycle.py  log_invite_url.py  roll.py  rolling.py  scene_management.py  scenes.py
discord_fate_bot/migrations/: __init__.py  alembic.ini  console_script.py  env.py
discord_fate_bot/model/: config.py  dice.py
tests/: test_dice.py
