[metadata]
name = discord-fate-bot
author = Chris Bouchard
author-email = chris@upliftinglemma.net
summary = Discord bot to help run a FATE campaign
license = MIT
classifier =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Topic :: Communications :: Chat :: Discord
    Topic :: Games/Entertainment :: Role-Playing :: Fate

[files]
packages =
    discord_fate_bot

[pbr]
skip_authors = True
skip_changelog = True

