[metadata]
name = discord-fate-bot
author = Chris Bouchard
author-email = chris@upliftinglemma.net
summary = Discord bot to help run a FATE campaign
home-page = https://github.com/chrisbouchard/discord-fate-bot
project-urls =
    Bug Tracker = https://github.com/chrisbouchard/discord-fate-bot/issues
    Source Code = https://github.com/chrisbouchard/discord-fate-bot
license = MIT
classifier =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Topic :: Communications :: Chat :: Discord
    Topic :: Games/Entertainment :: Role-Playing :: Fate

[files]
packages =
    discord_fate_bot

[entry_points]
console_scripts =
    discord-fate-bot = discord_fate_bot.console_script:main
    discord-fate-bot-migrate = discord_fate_bot.migrations.console_script:main

[pbr]
skip_authors = True
skip_changelog = True

# vim: set ft=dosini:

